--- a/style.css
+++ b/style.css
@@ -38,3 +38,17 @@ html {
 #topNav a:hover {
   color: #162B6F;
 }
+
+
+/* Greeting Pic */
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
