--- a/style.css
+++ b/style.css
@@ -52,3 +52,11 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+button {
+  color: black;
+  border: 1px solid black;
+  cursor: pointer;
+  width: 10%;
+  font-size: 10px;
+  border-radius: 20px;
+}
