--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html {
   box-sizing: border-box;
 }
-
+body {
+  color: black;
+}
 *,
 *::before,
 *::after {
@@ -56,7 +58,8 @@ button {
   color: black;
   border: 1px solid black;
   cursor: pointer;
-  width: 10%;
-  font-size: 10px;
+  padding: 5px;
+  width: auto;
+  font-size: 25px;
   border-radius: 20px;
 }
