--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   width: 80%;
   margin: 4% 10%;
   padding-left: auto;
-  padding-right: 50%;
+  padding-right: 50px;
   font-size: 20px;
   display: flex;
   justify-content: center;
