--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* Navbar */
 #topNav {
   width: 80%;
-  margin: 4% 10%;
+  margin: 4% 5%;
   padding-left: auto;
   padding-right: 150px;
   font-size: 20px;
@@ -70,7 +70,7 @@ button {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
 }
-.container {
+.uecontainer {
   padding: 10px 15px;
   color: black;
 }
