--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
+  height: 300px;
 }
 .uecontainer {
   padding: 10px 15px;
