--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
 #topNav {
   font-family: 'Noto Serif Khojki', serif;
   width: 80%;
-  margin: 5% 5%;
-  font-size: 20px;
+  margin: 2% 5% 5%;
+  font-size: 15px;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -46,7 +46,7 @@ body {
 }
 
 #topNav a {
-  padding: 50px 15px;
+  padding: 0px 40px;
   text-decoration: none;
   color: #9E9E9E;
 }
