--- a/style.css
+++ b/style.css
@@ -19,9 +19,14 @@ body {
   padding: 0;
 }
 
+h1 {
+  letter-spacing: 2px;
+}
+
 /* Header */
 .header {
   font-family: 'Oswald', sans-serif;
+  font-weight: 300;
   font-size: 25px; 
   padding-top: 40px;
   color: #162B6F;
@@ -32,7 +37,7 @@ body {
   font-family: 'Noto Serif Khojki', serif;
   width: 80%;
   margin: 2% 5% 5%;
-  font-size: 15px;
+  font-size: 20px;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -46,7 +51,7 @@ body {
 }
 
 #topNav a {
-  padding: 0px 40px;
+  padding: 0px 70px;
   text-decoration: none;
   color: #9E9E9E;
 }
@@ -70,7 +75,15 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.greet {
+  font-family: 'Oswald', sans-serif;
+  padding: 50px 0px 20px; 
+  color: black; 
+  font-size: 45px;
+}
+
 button {
+  font-family: 'Montserrat', sans-serif;
   color: black;
   border: 1px solid black;
   cursor: pointer;
@@ -78,6 +91,7 @@ button {
   width: auto;
   font-size: 25px;
   border-radius: 20px;
+  background-color: rgba(0,0,0,0,0);
 }
 
 /* Upcoming Events */
