--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
   font-family: 'Oswald', sans-serif;
   padding: 50px 0px 20px; 
   color: black; 
-  font-size: 45px;
+  font-size: 55px;
 }
 
 button {
@@ -88,16 +88,23 @@ button {
   cursor: pointer;
   padding: 5px;
   width: auto;
-  font-size: 25px;
+  font-size: 15px;
   border-radius: 20px;
-  background-color: rgba(0,0,0,0,0);
+  background-color: transparent;
 }
 
 /* Upcoming Events */
+.upcoming {
+  font-family: 'Oswald', sans-serif;
+  font-size: 25px; 
+  padding: 40px 0px 10px 0px;
+  color: #162B6F;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
-  height: 300px;
+  height: 600px;
 }
 .uecontainer {
   padding: 10px 15px;
@@ -107,7 +114,7 @@ button {
 .column {
   width: 25%;
   float: left;
-  margin: 2%;
+  padding: 10px;
 }
 .row::after {
   content: "";
