--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ button {
 .upcoming {
   font-family: 'Oswald', sans-serif;
   font-size: 30px; 
-  padding: 40px 0px 10px 0px;
+  padding: 70px 0px 40px 0px;
   color: #162B6F;
 }
 
@@ -105,6 +105,7 @@ button {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
   height: 500px;
+  padding: auto;
 }
 .uecontainer {
   padding: 10px 15px;
