--- a/style.css
+++ b/style.css
@@ -102,10 +102,10 @@ button {
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
   height: 500px;
   padding: auto;
+  border-color: #162B6F; 
 }
 .uecontainer {
   padding: 10px 15px;
