--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ button {
 .card {
   width: auto;
   height: 500px;
-  padding: auto;
+  padding: 0px 20px;
   border-color: #162B6F; 
 }
 .uecontainer {
