--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ header {
 /* Navbar */
 #topNav {
   font-family: 'Noto Serif Khojki', serif;
-  margin-left: 15%;
+  padding-left: 15%;
   padding-top: 30px;
+  width: 100%;
   height: 75px;
   position: fixed;
   text-align: left;
